[project]
name = "parquetranger"
description = "Read and write parquet files"
authors = [
    "Endre Márk Borza"
]
license = "MIT"
readme = "README.md"
python = ">=3.8"
url = "https://github.com/endremborza/parquetranger"
[build-system]
requires = [
    "toml >= 0.10.0",
    "setuptools >= 38.6.0",
    "wheel >= 0.31.0",
    "setuptools_scm >= 2.0.0, <3"
]
[tool.bran]
line-length = 79
