[project]
name = "parquetranger"
dynamic = ["version", "description"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "atqo>=0.2.2",
]

[project.optional-dependencies]
test = ["branthebuilder"]
doc = ["branthebuilder[doc]"]

[project.urls]
Homepage = "https://github.com/endremborza/parquetranger"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.branb]
line-length = 88
